# dm_mcp

./: .dockerignore  .gitignore  .smithery-verify  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  cursor-config-example.json  database.py  document_generator.py  main.py  pyproject.toml  requirements.txt  smithery.yaml
src/dm_mcp/: __init__.py  server.py
